base-apps/pinhole/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: dns
spec:
  type: NodePort
  ports:
    - port: 53
      protocol: TCP
      name: dns-tcp
      nodePort: 30053  # Custom NodePort for DNS TCP
    - port: 53
      protocol: UDP
      name: dns-udp
      nodePort: 30053  # Same port for DNS UDP
    - port: 80
      protocol: TCP
      name: http
      nodePort: 30090  # Web interface
  selector:
    app: pihole
