base-apps/pinhole/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pinhole
  namespace: dns
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`pinhole.arigsela.com`)
    kind: Rule
    services:
    - name: pinhole-tcp
      port: 80
